samples/_failures_safe/1761317227_0b6407_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70e57862.c: In function ‘next_token’:
./samples/SAFE/__tmp_70e57862.c:143:9: error: expected declaration or statement at end of input
  143 |         token.value[0] = lexer->input[lexer->position++];
      |         ^~~~~
./samples/SAFE/__tmp_70e57862.c:143:9: error: expected declaration or statement at end of input
